--- a/social_media_content_creator_agent/NIM_tool_call_HumanInTheLoop_MultiAgents.ipynb
+++ b/social_media_content_creator_agent/NIM_tool_call_HumanInTheLoop_MultiAgents.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cd38971e-d3c4-4adc-9986-c1d5f3ccabd3",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c7285dbc-31ce-4a95-aee9-901e472c5073",
    "metadata": {},
    "outputs": [],
@@ -124,10 +124,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7c20c3e5-b620-4bb6-996b-b402958bef53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/charan/VSCode/GITHUB/Assets_Youtube_Videos/venv/lib/python3.11/site-packages/IPython/core/interactiveshell.py:3577: LangChainDeprecationWarning: As of langchain-core 0.3.0, LangChain uses pydantic v2 internally. The langchain_core.pydantic_v1 module was a compatibility shim for pydantic v1, and should no longer be used. Please update the code to import from Pydantic directly.\n",
+      "\n",
+      "For example, replace imports like: `from langchain_core.pydantic_v1 import BaseModel`\n",
+      "with: `from pydantic import BaseModel`\n",
+      "or the v1 compatibility namespace if you are working in a code base that has not been fully upgraded to pydantic 2 yet. \tfrom pydantic.v1 import BaseModel\n",
+      "\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
    "source": [
     "# test run and see that you can genreate a respond successfully\n",
     "from langchain_nvidia_ai_endpoints import ChatNVIDIA\n",
@@ -220,17 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "fc1416b3-02d8-4d1a-8362-aa9d6bb1e5aa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Unlock Next-Gen AI Anywhere'"
+       "'Unlocking the Power of Community-Built AI Models with NVIDIA Acceleration'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,17 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "f28a508c-81ec-4f20-9cc2-d762d3d5e3e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Discover & deploy leading-edge, community-driven AI models optimized by NVIDIA. Power up your projects with NVIDIA NIM inference microservices. #NVIDIA #AI #Innovation'"
+       "\"Discover the future of AI deployment with the latest research from arXiv, as researchers explore the power of community-built AI models optimized and accelerated by NVIDIA, and deployable anywhere with NVIDIA NIM inference microservices. This paper delves into the challenges of optimizing AI models for various environments and highlights the significance of community-driven approaches in accelerating AI deployment. Key findings demonstrate the efficiency and scalability of NVIDIA NIM, offering valuable insights for developers and organizations looking to harness the full potential of AI. Check out the paper here: [link]. What are your thoughts on the potential of community-built AI models and NVIDIA's role in their optimization? #ResearchPaper #AI #arXiv #NVIDIA #CommunityBuilt #AIModels #Optimization #Deployment #InferenceMicroservices #FutureOfAI #ArtificialIntelligence #MachineLearning #TechInnovation #DigitalTransformation\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,21 +276,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "6208b390-cf0a-44a8-8cc5-ef517e7ef1b7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['#AICommunity',\n",
-       " '#NVIDIANIM',\n",
+       "['#ResearchPaper',\n",
+       " '#AI',\n",
+       " '#arXiv',\n",
+       " '#NVIDIA',\n",
+       " '#CommunityBuilt',\n",
+       " '#AIModels',\n",
+       " '#Optimization',\n",
+       " '#Deployment',\n",
+       " '#InferenceMicroservices',\n",
+       " '#FutureOfAI',\n",
        " '#ArtificialIntelligence',\n",
-       " '#InnovationNation',\n",
-       " '#TechForTomorrow']"
+       " '#MachineLearning',\n",
+       " '#TechInnovation',\n",
+       " '#DigitalTransformation']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6ca69380-937e-46d2-b4a0-37fd2899045f",
    "metadata": {},
    "outputs": [],
@@ -340,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "599ebaf2-4c79-4cf4-a7c9-53971c9238e2",
    "metadata": {},
    "outputs": [],
@@ -393,12 +416,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4fed6358-8d59-4b11-ab71-8387f1415526",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start generating image with llm re-write prompt: A iconic, futuristic image of a quantum computer and cow in artificial intelligence, bright and vibrant with no text, face, or amputation.\n",
+      "dict_keys(['base64', 'finishReason', 'seed'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'the output of the generated image will be stored in this path : output.jpg'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "out = generate_image(\"NVIDIA NeMo is a powerful SDK for all your GenAI needs\")\n",
+    "out = generate_image(\"Quantum computer + cow in artificial intelligence\")\n",
     "out"
    ]
   },
@@ -412,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4bcdbc6c-00c3-4d01-a55f-86483d42eeb2",
    "metadata": {},
    "outputs": [],
@@ -423,10 +465,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cee33b1a-b02b-4e8a-9260-2c2c815afec2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'generate_image',\n",
+       "  'args': {'prompt': 'NVIDIA power GenAI workflow'},\n",
+       "  'id': 'chatcmpl-tool-5bfb96bc590f435cbbb85f8374343d27',\n",
+       "  'type': 'tool_call'}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "out = llm_with_img_gen_tool.invoke(\"NVIDIA power GenAI workflow\")\n",
     "out.tool_calls"
@@ -434,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e77f5ac2-49b8-468c-95db-740c80acdd0a",
    "metadata": {},
    "outputs": [],
@@ -468,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "abb3f231-9096-458d-989c-1b8908b6d52f",
    "metadata": {},
    "outputs": [],
@@ -478,12 +534,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1f3e6616-2e4f-4673-a486-2ec42723a262",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start generating image with llm re-write prompt: A iconic, futuristic image of a quantum computer and laptop in artificial intelligence, with vibrant colors and no text, faces, or amputations.\n",
+      "dict_keys(['base64', 'finishReason', 'seed'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'the output of the generated image will be stored in this path : output.jpg'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "digital_artist.invoke(\"NVIDIA power GenAI workflow\")"
+    "digital_artist.invoke(\"Quantum computer + laptop in artificial intelligence\")"
    ]
   },
   {
