--- a/groq/01_llama_3_2_11b_vision/01_demo_llama_3_2_11b_vision.ipynb
+++ b/groq/01_llama_3_2_11b_vision/01_demo_llama_3_2_11b_vision.ipynb
@@ -37,40 +37,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The image shows Albert Einstein playing soccer with a team mate.\n",
+      "The image shows an older man and a younger man playing soccer in the desert, with the older man wearing a brown vest, green jacket, khaki pants, brown shoes, white socks, a dark green shirt, the younger man in a red soccer uniform, black shoes, red socks, white wristbands on his left and right wrist, a large number 12 on the front of his jersey, and along the side of the shorts a white wisply band with multiple thick red stripes. The older man is wearing a brown vest, green jacket, khaki pants, brown shoes, white socks, a dark green shirt, and the younger man is wearing a red soccer uniform, black shoes, red socks, white wristbands on his left and right wrist, a large number 12 on the front of his jersey, and along the side of the shorts a white wisply band with multiple thick red stripes.\n",
       "\n",
-      "* A man with white hair is playing soccer:\n",
-      "\t+ He is wearing a yellow vest over a green shirt.\n",
-      "\t+ His hair is styled in a flowing manner.\n",
-      "\t+ He appears to be in his senior years, possibly aged in the sixties or seventies.\n",
-      "\t+ He is running towards the ball with his legs bent and his arms outstretched.\n",
-      "* The man is wearing a yellow vest and green shirt:\n",
-      "\t+ The vest is made of a lightweight material and has a relaxed fit.\n",
-      "\t+ The green shirt underneath is long-sleeved and has a crew neck.\n",
-      "\t+ There are no visible logos or branding on the vest or shirt.\n",
-      "* The man has white hair and is running:\n",
-      "\t+ His hair is thick and unruly, with strands falling across his forehead.\n",
-      "\t+ He has a determined expression on his face.\n",
-      "\t+ His legs are bent at the knees, with his feet about to land on the ground and the ball.\n",
-      "* There is a soccer ball on the ground:\n",
-      "\t+ The ball is white with blue accents and has a star-shaped pattern on it.\n",
-      "\t+ It appears to be a standard-sized soccer ball.\n",
-      "\t+ It is on the ground, with the man about to kick it.\n",
+      "The older man appears to be a kind of fossil when he throws his head backward to look past his opponent; just like many fossils he seems to be much older with this being evidenced by his movements and hair. The image features both men kicking the ball, the older man is more focused whereas the younger man is being more cautious, for him the game revolves around winning, and his movement looks tense. His body, with the red uniform, white wristbands, and red shoulder band along with several other white stripes is on the attack, but his concentration focuses only on the forward momentum away from the other player. If you look closely and then compared to the soccer icon, adidas, you can see similarity. He is being attacked or more specifically defended by the older man who looks like the fossil man, we are told that something is special about him. The movement of the man is similar to an actor in a movie, or a fossilized ancient creature. From the photo, the hair and face both depict an old fossil. His form of movement is different from that of the younger man. While he is bending toward his knees, forward, the younger man is lifting up as if he is trying to get away from the older man's play. He has the ability to change his direction quickly. When the younger man starts to move in a wave pattern, the older man also starts to circle the ball.\n",
       "\n",
-      "Overall, the image shows an elderly Albert Einstein engaging in a game of soccer, showcasing his age and vitality. The image conveys a sense of joy and playfulness, highlighting the universal appeal of sports.\n"
+      "Therefore, the older man like a fossil, is constantly moving his body, turning in all directions, and the young man in the same way looks tense and defensive. The landscape is depicted as being hot and dry as opposed to his light green shirt, which would indicate that he is using all his powers to win. The landscape is being depicted as a field of red dust. The sun is shinning brightly in the background, which indicates that it is warm and dry. \n",
+      "\n",
+      "Each of the two are being equally determined and only one will win.\n"
      ]
     }
    ],
    "source": [
     "from groq import Groq\n",
     "import base64\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
     "\n",
     "\n",
     "# Function to encode the image\n",
